--- a/bsb/package.json
+++ b/bsb/package.json
@@ -7,7 +7,6 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -24,7 +23,8 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "husky install"
+    "postinstall": "cd .. && husky install bsb/.husky",
+    "linting": "lint-staged"
   },
   "private": true,
   "dependencies": {
@@ -58,9 +58,16 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "^5.0.8",
     "jest": "26.2.2",
+    "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
     "typescript": "~4.0.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   }
 }
